# Qt-BSU-2022

Additional_task/: CMakeLists.txt  main_window.cpp  main_window.h  paint_widget.cpp  paint_widget.h
Lab_3/: main_window.cpp  main_window.h
Lab_3_Tickets/: CMakeLists.txt
Lab_4_Ray_Caster/: CMakeLists.txt  constants.h  controller.cpp  controller.h  main.cpp  main_window.cpp  main_window.h  paint_widget.cpp  paint_widget.h  polygon.cpp  polygon.h  ray.cpp  ray.h
Lab_5_Duolingo/: CMakeLists.txt  PaO_tasks.txt  README.md  abstract_controller.h  audio_widget.h  constants.h  controller.cpp  controller.h  custom_widget.cpp  custom_widget.h  input_answer_widget.cpp  input_answer_widget.h  main.cpp  main_page_widget.h  main_window.cpp  main_window.h  model.cpp  model.h  pick_an_option_widget.cpp  pick_an_option_widget.h  resources.qrc  view.cpp  view.h
Lab_5_Duolingo/controller/: abstract_controller.h  controller.cpp  controller.h
Lab_5_Duolingo/model/: constants.h  model.cpp  model.h  task.cpp  task.h
Lab_5_Duolingo/tasks/: Audio_easy_tasks.txt  Audio_hard_tasks.txt  Audio_medium_tasks.txt  InputAnswer_easy_tasks.txt  InputAnswer_hard_tasks.txt  InputAnswer_medium_tasks.txt  PickAnOption_easy_tasks.txt  PickAnOption_hard_tasks.txt  PickAnOption_medium_tasks.txt  resources.qrc
Lab_5_Duolingo/view/: audio_widget.cpp  audio_widget.h  custom_widget.cpp  custom_widget.h  input_answer_widget.cpp  input_answer_widget.h  main_page_widget.cpp  main_page_widget.h  main_window.cpp  main_window.h  pick_an_option_widget.cpp  pick_an_option_widget.h
